Fixed DialogActions alignments

--- a/src/web/scss/components/keypad.scss
+++ b/src/web/scss/components/keypad.scss
@@ -3,7 +3,7 @@
 
     svg.keypad-image {
         display: inline-block;
-        filter: drop-shadow(-1px 1.5px 1px hsla(0, 0%, 0%, 0.55));
+        filter: drop-shadow(1px 1.5px hsl(207, 89%, 34%));
         height: 200px;
         width: auto;
 
